--- a/Project_Familiarization_Shri.ipynb
+++ b/Project_Familiarization_Shri.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -257,9 +257,8 @@
        "[81741 rows x 9 columns]"
       ]
      },
-     "execution_count": 32,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -273,9 +272,12 @@
     "# This function will\n",
     "# read data from file\n",
     "\n",
+    "# Just fill this with wherever is your data :\n",
+    "file_source = \"/Users/shrinidhivelan/Downloads/\"\n",
+    "\n",
     "# MetaData\n",
-    "MovieMetadata_df = pd.read_csv('MovieSummaries/movie.metadata.tsv', sep='\\t', header=None)\n",
-    "CharacterMetadata_df = pd.read_csv('MovieSummaries/character.metadata.tsv', sep='\\t', header=None)\n",
+    "MovieMetadata_df = pd.read_csv(file_source +'/MovieSummaries/movie.metadata.tsv', sep='\\t', header=None)\n",
+    "CharacterMetadata_df = pd.read_csv(file_source + '/MovieSummaries/character.metadata.tsv', sep='\\t', header=None)\n",
     "\n",
     "# Define column headers as a list\n",
     "MovieMetadata_df_headers = [\n",
@@ -312,9 +314,9 @@
     "CharacterMetadata_df.columns = CharacterMetadata_df_headers\n",
     "\n",
     "# Text data \n",
-    "names_df = pd.read_csv('MovieSummaries/name.clusters.txt', sep=\"\\t\", header=None)\n",
-    "plot_summaries_df = pd.read_csv('MovieSummaries/plot_summaries.txt', sep=\"\\t\", header=None)\n",
-    "tvTropes_df = pd.read_csv('MovieSummaries/tvtropes.clusters.txt', sep=\"\\t\", header=None)\n",
+    "names_df = pd.read_csv(file_source+'MovieSummaries/name.clusters.txt', sep=\"\\t\", header=None)\n",
+    "plot_summaries_df = pd.read_csv(file_source+'MovieSummaries/plot_summaries.txt', sep=\"\\t\", header=None)\n",
+    "tvTropes_df = pd.read_csv(file_source+'MovieSummaries/tvtropes.clusters.txt', sep=\"\\t\", header=None)\n",
     "\n",
     "names_df_headers = [\n",
     "    'Character Names',\n",
@@ -339,7 +341,7 @@
     "plot_summaries_df.columns = plot_summaries_df_headers\n",
     " \n",
     "# printing data\n",
-    "MovieMetadata_df"
+    "display(MovieMetadata_df)"
    ]
   },
   {
