--- a/Project_Familiarization_Shri.ipynb
+++ b/Project_Familiarization_Shri.ipynb
@@ -272,7 +272,9 @@
     "# This function will\n",
     "# read data from file\n",
     "\n",
-    "# Just fill this with wherever is your data :\n",
+    "# PDF file to read if lost : https://www.cs.cmu.edu/~dbamman/pubs/pdf/bamman+oconnor+smith.acl13.pdf\n",
+    "\n",
+    "# Just fill this with wherever is your main data folder is :\n",
     "file_source = \"/Users/shrinidhivelan/Downloads/\"\n",
     "\n",
     "# MetaData\n",
@@ -342,6 +344,13 @@
     " \n",
     "# printing data\n",
     "display(MovieMetadata_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data description : \n"
    ]
   },
   {
