--- a/Project_Familiarization_Shri.ipynb
+++ b/Project_Familiarization_Shri.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -838,13 +838,13 @@
        "[1124109 rows x 24 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reviews"
+    "reviews#.columns"
    ]
   },
   {
