--- a/Project_Familiarization_Shri.ipynb
+++ b/Project_Familiarization_Shri.ipynb
@@ -962,6 +962,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now let's do a merge of the movie metadata file with the reviews file :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_Movie = MovieMetadata_df.merge(reviews, how='left', left_on = 'Movie name', right_on = 'title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Wikipedia movie ID', 'Freebase movie ID', 'Movie name',\n",
+       "       'Movie release date', 'Movie box office revenue', 'Movie runtime',\n",
+       "       'Movie languages (Freebase ID:name tuples)',\n",
+       "       'Movie countries (Freebase ID:name tuples)',\n",
+       "       'Movie genres (Freebase ID:name tuples)', 'id', 'title', 'vote_average',\n",
+       "       'vote_count', 'status', 'release_date', 'revenue', 'runtime', 'adult',\n",
+       "       'backdrop_path', 'budget', 'homepage', 'imdb_id', 'original_language',\n",
+       "       'original_title', 'overview', 'popularity', 'poster_path', 'tagline',\n",
+       "       'genres', 'production_companies', 'production_countries',\n",
+       "       'spoken_languages', 'keywords'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_Movie.columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
