--- a/Project_Familiarization_Shri.ipynb
+++ b/Project_Familiarization_Shri.ipynb
@@ -2,269 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Wikipedia movie ID</th>\n",
-       "      <th>Freebase movie ID</th>\n",
-       "      <th>Movie name</th>\n",
-       "      <th>Movie release date</th>\n",
-       "      <th>Movie box office revenue</th>\n",
-       "      <th>Movie runtime</th>\n",
-       "      <th>Movie languages (Freebase ID:name tuples)</th>\n",
-       "      <th>Movie countries (Freebase ID:name tuples)</th>\n",
-       "      <th>Movie genres (Freebase ID:name tuples)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>975900</td>\n",
-       "      <td>/m/03vyhn</td>\n",
-       "      <td>Ghosts of Mars</td>\n",
-       "      <td>2001-08-24</td>\n",
-       "      <td>14010832.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
-       "      <td>{\"/m/09c7w0\": \"United States of America\"}</td>\n",
-       "      <td>{\"/m/01jfsb\": \"Thriller\", \"/m/06n90\": \"Science...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3196793</td>\n",
-       "      <td>/m/08yl5d</td>\n",
-       "      <td>Getting Away with Murder: The JonBenét Ramsey ...</td>\n",
-       "      <td>2000-02-16</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
-       "      <td>{\"/m/09c7w0\": \"United States of America\"}</td>\n",
-       "      <td>{\"/m/02n4kr\": \"Mystery\", \"/m/03bxz7\": \"Biograp...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>28463795</td>\n",
-       "      <td>/m/0crgdbh</td>\n",
-       "      <td>Brun bitter</td>\n",
-       "      <td>1988</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>{\"/m/05f_3\": \"Norwegian Language\"}</td>\n",
-       "      <td>{\"/m/05b4w\": \"Norway\"}</td>\n",
-       "      <td>{\"/m/0lsxr\": \"Crime Fiction\", \"/m/07s9rl0\": \"D...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9363483</td>\n",
-       "      <td>/m/0285_cd</td>\n",
-       "      <td>White Of The Eye</td>\n",
-       "      <td>1987</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>110.0</td>\n",
-       "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
-       "      <td>{\"/m/07ssc\": \"United Kingdom\"}</td>\n",
-       "      <td>{\"/m/01jfsb\": \"Thriller\", \"/m/0glj9q\": \"Erotic...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>261236</td>\n",
-       "      <td>/m/01mrr1</td>\n",
-       "      <td>A Woman in Flames</td>\n",
-       "      <td>1983</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>{\"/m/04306rv\": \"German Language\"}</td>\n",
-       "      <td>{\"/m/0345h\": \"Germany\"}</td>\n",
-       "      <td>{\"/m/07s9rl0\": \"Drama\"}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81736</th>\n",
-       "      <td>35228177</td>\n",
-       "      <td>/m/0j7hxnt</td>\n",
-       "      <td>Mermaids: The Body Found</td>\n",
-       "      <td>2011-03-19</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
-       "      <td>{\"/m/09c7w0\": \"United States of America\"}</td>\n",
-       "      <td>{\"/m/07s9rl0\": \"Drama\"}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81737</th>\n",
-       "      <td>34980460</td>\n",
-       "      <td>/m/0g4pl34</td>\n",
-       "      <td>Knuckle</td>\n",
-       "      <td>2011-01-21</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
-       "      <td>{\"/m/03rt9\": \"Ireland\", \"/m/07ssc\": \"United Ki...</td>\n",
-       "      <td>{\"/m/03bxz7\": \"Biographical film\", \"/m/07s9rl0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81738</th>\n",
-       "      <td>9971909</td>\n",
-       "      <td>/m/02pygw1</td>\n",
-       "      <td>Another Nice Mess</td>\n",
-       "      <td>1972-09-22</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
-       "      <td>{\"/m/09c7w0\": \"United States of America\"}</td>\n",
-       "      <td>{\"/m/06nbt\": \"Satire\", \"/m/01z4y\": \"Comedy\"}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81739</th>\n",
-       "      <td>913762</td>\n",
-       "      <td>/m/03pcrp</td>\n",
-       "      <td>The Super Dimension Fortress Macross II: Lover...</td>\n",
-       "      <td>1992-05-21</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>{\"/m/03_9r\": \"Japanese Language\"}</td>\n",
-       "      <td>{\"/m/03_3d\": \"Japan\"}</td>\n",
-       "      <td>{\"/m/06n90\": \"Science Fiction\", \"/m/0gw5n2f\": ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81740</th>\n",
-       "      <td>12476867</td>\n",
-       "      <td>/m/02w7zz8</td>\n",
-       "      <td>Spliced</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
-       "      <td>{\"/m/0d060g\": \"Canada\"}</td>\n",
-       "      <td>{\"/m/01jfsb\": \"Thriller\", \"/m/03npn\": \"Horror\"...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>81741 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Wikipedia movie ID Freebase movie ID  \\\n",
-       "0                  975900         /m/03vyhn   \n",
-       "1                 3196793         /m/08yl5d   \n",
-       "2                28463795        /m/0crgdbh   \n",
-       "3                 9363483        /m/0285_cd   \n",
-       "4                  261236         /m/01mrr1   \n",
-       "...                   ...               ...   \n",
-       "81736            35228177        /m/0j7hxnt   \n",
-       "81737            34980460        /m/0g4pl34   \n",
-       "81738             9971909        /m/02pygw1   \n",
-       "81739              913762         /m/03pcrp   \n",
-       "81740            12476867        /m/02w7zz8   \n",
-       "\n",
-       "                                              Movie name Movie release date  \\\n",
-       "0                                         Ghosts of Mars         2001-08-24   \n",
-       "1      Getting Away with Murder: The JonBenét Ramsey ...         2000-02-16   \n",
-       "2                                            Brun bitter               1988   \n",
-       "3                                       White Of The Eye               1987   \n",
-       "4                                      A Woman in Flames               1983   \n",
-       "...                                                  ...                ...   \n",
-       "81736                           Mermaids: The Body Found         2011-03-19   \n",
-       "81737                                            Knuckle         2011-01-21   \n",
-       "81738                                  Another Nice Mess         1972-09-22   \n",
-       "81739  The Super Dimension Fortress Macross II: Lover...         1992-05-21   \n",
-       "81740                                            Spliced               2002   \n",
-       "\n",
-       "       Movie box office revenue  Movie runtime  \\\n",
-       "0                    14010832.0           98.0   \n",
-       "1                           NaN           95.0   \n",
-       "2                           NaN           83.0   \n",
-       "3                           NaN          110.0   \n",
-       "4                           NaN          106.0   \n",
-       "...                         ...            ...   \n",
-       "81736                       NaN          120.0   \n",
-       "81737                       NaN           96.0   \n",
-       "81738                       NaN           66.0   \n",
-       "81739                       NaN          150.0   \n",
-       "81740                       NaN           86.0   \n",
-       "\n",
-       "      Movie languages (Freebase ID:name tuples)  \\\n",
-       "0            {\"/m/02h40lc\": \"English Language\"}   \n",
-       "1            {\"/m/02h40lc\": \"English Language\"}   \n",
-       "2            {\"/m/05f_3\": \"Norwegian Language\"}   \n",
-       "3            {\"/m/02h40lc\": \"English Language\"}   \n",
-       "4             {\"/m/04306rv\": \"German Language\"}   \n",
-       "...                                         ...   \n",
-       "81736        {\"/m/02h40lc\": \"English Language\"}   \n",
-       "81737        {\"/m/02h40lc\": \"English Language\"}   \n",
-       "81738        {\"/m/02h40lc\": \"English Language\"}   \n",
-       "81739         {\"/m/03_9r\": \"Japanese Language\"}   \n",
-       "81740        {\"/m/02h40lc\": \"English Language\"}   \n",
-       "\n",
-       "               Movie countries (Freebase ID:name tuples)  \\\n",
-       "0              {\"/m/09c7w0\": \"United States of America\"}   \n",
-       "1              {\"/m/09c7w0\": \"United States of America\"}   \n",
-       "2                                 {\"/m/05b4w\": \"Norway\"}   \n",
-       "3                         {\"/m/07ssc\": \"United Kingdom\"}   \n",
-       "4                                {\"/m/0345h\": \"Germany\"}   \n",
-       "...                                                  ...   \n",
-       "81736          {\"/m/09c7w0\": \"United States of America\"}   \n",
-       "81737  {\"/m/03rt9\": \"Ireland\", \"/m/07ssc\": \"United Ki...   \n",
-       "81738          {\"/m/09c7w0\": \"United States of America\"}   \n",
-       "81739                              {\"/m/03_3d\": \"Japan\"}   \n",
-       "81740                            {\"/m/0d060g\": \"Canada\"}   \n",
-       "\n",
-       "                  Movie genres (Freebase ID:name tuples)  \n",
-       "0      {\"/m/01jfsb\": \"Thriller\", \"/m/06n90\": \"Science...  \n",
-       "1      {\"/m/02n4kr\": \"Mystery\", \"/m/03bxz7\": \"Biograp...  \n",
-       "2      {\"/m/0lsxr\": \"Crime Fiction\", \"/m/07s9rl0\": \"D...  \n",
-       "3      {\"/m/01jfsb\": \"Thriller\", \"/m/0glj9q\": \"Erotic...  \n",
-       "4                                {\"/m/07s9rl0\": \"Drama\"}  \n",
-       "...                                                  ...  \n",
-       "81736                            {\"/m/07s9rl0\": \"Drama\"}  \n",
-       "81737  {\"/m/03bxz7\": \"Biographical film\", \"/m/07s9rl0...  \n",
-       "81738       {\"/m/06nbt\": \"Satire\", \"/m/01z4y\": \"Comedy\"}  \n",
-       "81739  {\"/m/06n90\": \"Science Fiction\", \"/m/0gw5n2f\": ...  \n",
-       "81740  {\"/m/01jfsb\": \"Thriller\", \"/m/03npn\": \"Horror\"...  \n",
-       "\n",
-       "[81741 rows x 9 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple Way to Read TSV Files in Python using pandas\n",
     "# importing pandas library\n",
     "import pandas as pd\n",
+    "from helpers import *\n",
     " \n",
     "# Passing the TSV file to\n",
     "# read_csv() function\n",
@@ -274,80 +19,14 @@
     "\n",
     "# PDF file to read if lost : https://www.cs.cmu.edu/~dbamman/pubs/pdf/bamman+oconnor+smith.acl13.pdf\n",
     "\n",
-    "# Just fill this with wherever is your main data folder is :\n",
+    "# Just fill this with wherever is your main data folder is (copy the path just before 'MovieSummaries'):\n",
     "file_source = \"/Users/shrinidhivelan/Downloads/\"\n",
     "\n",
-    "# MetaData \n",
-    "\n",
-    "#### Movie metadata #### DF\n",
-    "MovieMetadata_df = pd.read_csv(file_source +'/MovieSummaries/movie.metadata.tsv', sep='\\t', header=None)\n",
-    "\n",
-    "#### Character metadata #### DF\n",
-    "CharacterMetadata_df = pd.read_csv(file_source + '/MovieSummaries/character.metadata.tsv', sep='\\t', header=None)\n",
-    "\n",
-    "# Define column headers as a list\n",
-    "MovieMetadata_df_headers = [\n",
-    "    'Wikipedia movie ID',\n",
-    "    'Freebase movie ID',\n",
-    "    'Movie name',\n",
-    "    'Movie release date',\n",
-    "    'Movie box office revenue',\n",
-    "    'Movie runtime',\n",
-    "    'Movie languages (Freebase ID:name tuples)',\n",
-    "    'Movie countries (Freebase ID:name tuples)',\n",
-    "    'Movie genres (Freebase ID:name tuples)'\n",
-    "]\n",
-    "\n",
-    "MovieMetadata_df.columns = MovieMetadata_df_headers\n",
-    "\n",
-    "# Define column headers for the second dataset\n",
-    "CharacterMetadata_df_headers = [\n",
-    "    'Wikipedia movie ID',\n",
-    "    'Freebase movie ID',\n",
-    "    'Movie release date',\n",
-    "    'Character name',\n",
-    "    'Actor date of birth',\n",
-    "    'Actor gender',\n",
-    "    'Actor height (in meters)',\n",
-    "    'Actor ethnicity (Freebase ID)',\n",
-    "    'Actor name',\n",
-    "    'Actor age at movie release',\n",
-    "    'Freebase character/actor map ID',\n",
-    "    'Freebase character ID',\n",
-    "    'Freebase actor ID'\n",
-    "]\n",
-    "\n",
-    "CharacterMetadata_df.columns = CharacterMetadata_df_headers\n",
-    "\n",
-    "# Text data \n",
-    "names_df = pd.read_csv(file_source+'MovieSummaries/name.clusters.txt', sep=\"\\t\", header=None)\n",
-    "plot_summaries_df = pd.read_csv(file_source+'MovieSummaries/plot_summaries.txt', sep=\"\\t\", header=None)\n",
-    "tvTropes_df = pd.read_csv(file_source+'MovieSummaries/tvtropes.clusters.txt', sep=\"\\t\", header=None)\n",
-    "\n",
-    "names_df_headers = [\n",
-    "    'Character Names',\n",
-    "    'Instances'\n",
-    "]\n",
-    "\n",
-    "names_df.columns = names_df_headers\n",
-    "\n",
-    "tvTropes_df_headers = [\n",
-    "    'Character Types',\n",
-    "    'Instances'\n",
-    "]\n",
-    "\n",
-    "tvTropes_df.columns = tvTropes_df_headers\n",
+    "# Same goes for the reviews dataset : but simply copy the entire path:\n",
+    "reviews_path = \"/Users/shrinidhivelan/Downloads/TMDB_movie_dataset_v11.csv\"\n",
     "\n",
     "\n",
-    "plot_summaries_df_headers = [\n",
-    "    'Wikipedia movie ID',\n",
-    "    'Summaries'\n",
-    "]\n",
-    "\n",
-    "plot_summaries_df.columns = plot_summaries_df_headers\n",
-    " \n",
-    "# printing data\n",
-    "display(MovieMetadata_df)"
+    "MovieMetadata_df, CharacterMetadata_df, names_df, plot_summaries_df, tvTropes_df = create_datasets(file_source, reviews_path)"
    ]
   },
   {
@@ -1009,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
