--- a/Results.ipynb
+++ b/Results.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from helpers import *\n",
+    "from helpers import *\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from collections import Counter\n",
