modifié un commentaire

--- a/Results.ipynb
+++ b/Results.ipynb
@@ -32,18 +32,19 @@
     " \n",
     "# Just fill this with wherever is your main data folder is (copy the path just before 'MovieSummaries'):\n",
     "file_source = \"/Users/shrinidhivelan/Downloads/\"\n",
+    "file_source ='/Users/mariannecivitardevol/Documents/EPFL/Masters/Year 2/ADA copy/'\n",
     "\n",
     "# Same goes for the reviews dataset : but simply copy the entire path of where your reviews data is... \n",
-    "reviews_path = \"/Users/shrinidhivelan/Downloads/TMDB_movie_dataset_v11.csv\"\n",
+    "#reviews_path = \"/Users/shrinidhivelan/Downloads/TMDB_movie_dataset_v11.csv\"\n",
     "\n",
     "# replace the following by the direct path of where your bechdel test movie data is:\n",
     "bechdel_path = \"/Users/shrinidhivelan/Downloads/movies.csv\"\n",
     "bechdel_path2 = \"/Users/mariannecivitardevol/Documents/EPFL/Masters/Year 2/ADA copy/MovieSummaries/movies_feminism.csv\"\n",
     "\n",
     "### creating dataset by extracting the main CMU data \n",
-    "MovieMetadata_df, CharacterMetadata_df, names_df, plot_summaries_df, tvTropes_df, merged_df = create_datasets(file_source, reviews_path)\n",
+    "MovieMetadata_df, CharacterMetadata_df, names_df, plot_summaries_df, tvTropes_df = create_datasets(file_source)\n",
     "\n",
-    "reviews = pd.read_csv(reviews_path)\n",
+    "#reviews = pd.read_csv(reviews_path)\n",
     "\n",
     "MovieMetadata_df['Country dictionnaire'] = MovieMetadata_df['Movie countries (Freebase ID:name tuples)'].apply(ast.literal_eval)\n",
     "MovieMetadata_df['Genre dictionnaire'] = MovieMetadata_df['Movie genres (Freebase ID:name tuples)'].apply(ast.literal_eval)\n",
@@ -541,14 +542,14 @@
     "feminist_count = plot_summaries_df[plot_summaries_df['prediction'] == 1]\n",
     "count_per_year = feminist_count.groupby('year').size().reset_index(name='count')\n",
     "\n",
-    "# Plot the number of true predictions per year\n",
-    "plt.figure(figsize=(20, 8))  # Increase the width of the figure\n",
+    "# Plot the fraction of feminist movies per year\n",
+    "plt.figure(figsize=(20, 8)) \n",
     "plt.bar(count_per_year['year'], count_per_year['count']/len(plot_summaries_df))\n",
     "plt.xlabel('Year')\n",
     "plt.ylabel('Fraction of feminist movies per year')\n",
     "plt.title('Fraction of feminist movies per Year')\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
-    "plt.xticks(rotation=90, fontsize=8)  # Reduce font size for x-axis labels\n",
+    "plt.xticks(rotation=90, fontsize=8) \n",
     "plt.show()"
    ]
   },
@@ -1027,7 +1028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
