--- a/Results 2.ipynb
+++ b/Results 2.ipynb
@@ -10,7 +10,7 @@
     "- General exploration\n",
     "- Feminism\n",
     "- Space exploration \n",
-    "- WW2\n",
+    "- war2\n",
     "\n",
     "We would like to finetune DistilBERT on our dataset in order to determine whether movie passed the bechdel test or not:\n",
     "https://huggingface.co/docs/transformers/en/tasks/sequence_classification \n",
@@ -1046,13 +1046,13 @@
     "\n",
     "pattern_war = '|'.join(substrings_war)\n",
     "\n",
-    "WW_movies_df = MovieMetadata_df_1[MovieMetadata_df_1['Summaries'].str.contains(pattern_war, case=False, na=False)]\n",
+    "war_movies_df = MovieMetadata_df_1[MovieMetadata_df_1['Summaries'].str.contains(pattern_war, case=False, na=False)]\n",
     "\n",
     "# Filter for movies labeled as \"War\" genre by the original dataset\n",
     "genre_war_movies = MovieMetadata_df[MovieMetadata_df['Movie genres (Freebase ID:name tuples)'].str.contains('War', case=False, na=False)]\n",
     "\n",
     "# Combine both criteria based list of movies\n",
-    "WW_movies_df = pd.concat([WW_movies_df, genre_war_movies], ignore_index=True).drop_duplicates()\n"
+    "war_movies_df = pd.concat([war_movies_df, genre_war_movies], ignore_index=True).drop_duplicates()\n"
    ]
   },
   {
@@ -1076,15 +1076,15 @@
    "outputs": [],
    "source": [
     "# Count the number of War movies per year\n",
-    "WW_movies_per_year = WW_movies_df['Movie release date'].value_counts().sort_index()\n",
+    "war_movies_per_year = war_movies_df['Movie release date'].value_counts().sort_index()\n",
     "\n",
     "# Plotting\n",
     "plt.figure(figsize=(12, 6))\n",
-    "WW_movies_per_year.plot(kind='bar')\n",
+    "war_movies_per_year.plot(kind='bar')\n",
     "plt.title('Number of War Movies Released Per Year')\n",
     "plt.xlabel('Year')\n",
     "plt.ylabel('Number of war movies produced')\n",
-    "plt.xticks(ticks=range(0, len(WW_movies_per_year), 2), labels=WW_movies_per_year.index[::2], rotation=90)\n",
+    "plt.xticks(ticks=range(0, len(war_movies_per_year), 2), labels=war_movies_per_year.index[::2], rotation=90)\n",
     "\n",
     "plt.show()"
    ]
@@ -1103,14 +1103,14 @@
    "outputs": [],
    "source": [
     "# Get yearly proportion of movies produced being war-related movies\n",
-    "WW_movies_proportion_per_year = (WW_movies_per_year / movies_per_year * 100).dropna()\n",
+    "war_movies_proportion_per_year = (war_movies_per_year / movies_per_year * 100).dropna()\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "WW_movies_proportion_per_year.plot(kind='bar')\n",
+    "war_movies_proportion_per_year.plot(kind='bar')\n",
     "plt.title('Proportion of War Movies Released Per Year')\n",
     "plt.xlabel('Year')\n",
     "plt.ylabel('Proportion of War Movies (%)')\n",
-    "plt.xticks(ticks=range(0, len(WW_movies_proportion_per_year), 2), labels=WW_movies_proportion_per_year.index[::2], rotation=90)\n"
+    "plt.xticks(ticks=range(0, len(war_movies_proportion_per_year), 2), labels=war_movies_proportion_per_year.index[::2], rotation=90)\n"
    ]
   },
   {
@@ -1146,14 +1146,14 @@
     "total_revenue_per_year = MovieMetadata_df.groupby('Movie release date')['Movie box office revenue'].sum()\n",
     "\n",
     "# Calculate Total Box Office Revenue for World War Movies Per Year\n",
-    "WW_revenue_per_year = WW_movies_df.groupby('Movie release date')['Movie box office revenue'].sum()\n",
+    "war_revenue_per_year = war_movies_df.groupby('Movie release date')['Movie box office revenue'].sum()\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "WW_revenue_per_year.plot(kind='bar')\n",
+    "war_revenue_per_year.plot(kind='bar')\n",
     "plt.title('Total Box Office Revenues from War Movies across the years')\n",
     "plt.xlabel('Year')\n",
     "plt.ylabel('Box Office Revenues')\n",
-    "plt.xticks(ticks=range(0, len(WW_revenue_per_year), 2), labels=WW_revenue_per_year.index[::2], rotation=90)"
+    "plt.xticks(ticks=range(0, len(war_revenue_per_year), 2), labels=war_revenue_per_year.index[::2], rotation=90)"
    ]
   },
   {
@@ -1170,14 +1170,14 @@
    "outputs": [],
    "source": [
     "# Calculate the Percentage of Box Office Revenue\n",
-    "WW_revenue_proportion_per_year = (WW_revenue_per_year / total_revenue_per_year * 100).dropna()\n",
+    "war_revenue_proportion_per_year = (war_revenue_per_year / total_revenue_per_year * 100).dropna()\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "WW_revenue_proportion_per_year.plot(kind='bar')\n",
+    "war_revenue_proportion_per_year.plot(kind='bar')\n",
     "plt.title('Total Box Office Revenues from War Movies across the years')\n",
     "plt.xlabel('Year')\n",
     "plt.ylabel('Box Office Revenues Proportion')\n",
-    "plt.xticks(ticks=range(0, len(WW_revenue_proportion_per_year), 2), labels=WW_revenue_proportion_per_year.index[::2], rotation=90)"
+    "plt.xticks(ticks=range(0, len(war_revenue_proportion_per_year), 2), labels=war_revenue_proportion_per_year.index[::2], rotation=90)"
    ]
   },
   {
