--- a/Results.ipynb
+++ b/Results.ipynb
@@ -1010,6 +1010,199 @@
     "print('Number of USSR movies that are related to the space race : ' , ussr_space_movies.shape[0])\n",
     "print('Number of USSR movies related to the space race with box office revenue information : ', ussr_space_movies['Movie box office revenue'].dropna().shape[0])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3) World War II and War Movies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selection of \"War Movies\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the keywords used here to qualify a movie as \"war-related\" may be unsufficient or unprecise and should be refined during the project. \n",
+    "\n",
+    "The following is an exploratory analysis aiming to observe some expected effects of World War II in the popularity of war-related movies, to assess future prospects of analysis of our data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The strings we are going to look for\n",
+    "substrings_war = ['World War', 'World war', 'world war', 'War ', 'war ', ' war', ' War']\n",
+    "\n",
+    "pattern_war = '|'.join(substrings_war)\n",
+    "\n",
+    "war_movies_df = MovieMetadata_df_1[MovieMetadata_df_1['Summaries'].str.contains(pattern_war, case=False, na=False)]\n",
+    "\n",
+    "# Filter for movies labeled as \"War\" genre by the original dataset\n",
+    "genre_war_movies = MovieMetadata_df[MovieMetadata_df['Movie genres (Freebase ID:name tuples)'].str.contains('War', case=False, na=False)]\n",
+    "\n",
+    "# Combine both criteria based list of movies\n",
+    "war_movies_df = pd.concat([war_movies_df, genre_war_movies], ignore_index=True).drop_duplicates()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evolution in number of War Movies Produced"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We count the number of movies related to war produced every year and plot the evolution of these values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count the number of War movies per year\n",
+    "war_movies_per_year = war_movies_df['Movie release date'].value_counts().sort_index()\n",
+    "\n",
+    "# Plotting\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "war_movies_per_year.plot(kind='bar')\n",
+    "plt.title('Number of War Movies Released Per Year')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Number of war movies produced')\n",
+    "plt.xticks(ticks=range(0, len(war_movies_per_year), 2), labels=war_movies_per_year.index[::2], rotation=90)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can already see a peak around 1940 but we also have to agknowledge the increase in movie release over the years, and therefore normalize by the total number of movies producedeach year to get a proportion in percentage. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get yearly proportion of movies produced being war-related movies\n",
+    "war_movies_proportion_per_year = (war_movies_per_year / movies_per_year * 100).dropna()\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "war_movies_proportion_per_year.plot(kind='bar')\n",
+    "plt.title('Proportion of War Movies Released Per Year')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Proportion of War Movies (%)')\n",
+    "plt.xticks(ticks=range(0, len(war_movies_proportion_per_year), 2), labels=war_movies_proportion_per_year.index[::2], rotation=90)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This statistic gives us the results one could expect: a net peak around the 1940's when war was the most omnipresent subject there could be. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### War movies box office values fluctuation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One could argue that it could just be a high number of small movies being produced inspired by the recent events, but maybe not being successful in the process. \n",
+    "\n",
+    "We now try to observe fluctuations in the box office revenues registered for war movies across the years, symbolizing the quantity of people willing to pay to see them. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate Total Box Office Revenue Per Year for All Movies\n",
+    "total_revenue_per_year = MovieMetadata_df.groupby('Movie release date')['Movie box office revenue'].sum()\n",
+    "\n",
+    "# Calculate Total Box Office Revenue for World War Movies Per Year\n",
+    "war_revenue_per_year = war_movies_df.groupby('Movie release date')['Movie box office revenue'].sum()\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "war_revenue_per_year.plot(kind='bar')\n",
+    "plt.title('Total Box Office Revenues from War Movies across the years')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Box Office Revenues')\n",
+    "plt.xticks(ticks=range(0, len(war_revenue_per_year), 2), labels=war_revenue_per_year.index[::2], rotation=90)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see the graph already has a different shape than expected. We then divide by the total box office revenue for every movie of each year.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the Percentage of Box Office Revenue\n",
+    "war_revenue_proportion_per_year = (war_revenue_per_year / total_revenue_per_year * 100).dropna()\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "war_revenue_proportion_per_year.plot(kind='bar')\n",
+    "plt.title('Total Box Office Revenues from War Movies across the years')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Box Office Revenues Proportion')\n",
+    "plt.xticks(ticks=range(0, len(war_revenue_proportion_per_year), 2), labels=war_revenue_proportion_per_year.index[::2], rotation=90)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get less conclusive results than earlier, which could be attributed to fluctuation in the value of money itself, but let's first take a look at our data and nan values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nan_count = MovieMetadata_df['Movie box office revenue'].isna().sum()\n",
+    "\n",
+    "print(f\"Number of NaN values for the box office revenue: {nan_count} out of {len(MovieMetadata_df['Movie box office revenue'])}, ({round(100*nan_count/len(MovieMetadata_df['Movie box office revenue']), 0)}%)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This result means we will probably need to find another dataset to fill the missing values in our to have a meaningful analysis of box office values. "
+   ]
   }
  ],
  "metadata": {
