--- a/Results.ipynb
+++ b/Results.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,17 @@
     " \n",
     "# Just fill this with wherever is your main data folder is (copy the path just before 'MovieSummaries'):\n",
     "file_source = \"/Users/shrinidhivelan/Downloads/\"\n",
-    "#file_source ='/Users/mariannecivitardevol/Documents/EPFL/Masters/Year 2/ADA copy/'\n",
     "\n",
     "# Same goes for the reviews dataset : but simply copy the entire path of where your reviews data is... \n",
     "reviews_path = \"/Users/shrinidhivelan/Downloads/TMDB_movie_dataset_v11.csv\"\n",
     "\n",
-    "# replace the following by the direct path of where your bechdel test movie data is:\n",
+    "# replace the following by the direct path of where  [(2) bechdel test dataset] your bechdel test movie data is:\n",
     "bechdel_path = \"/Users/shrinidhivelan/Downloads/movies.csv\"\n",
-    "#bechdel_path2 = \"/Users/mariannecivitardevol/Documents/EPFL/Masters/Year 2/ADA copy/MovieSummaries/movies_feminism.csv\"\n",
     "\n",
-    "### creating dataset by extracting the main CMU data \n",
+    "# replace the following by the direct path of where  [(1) feminism dataset] your bechdel test movie data is:\n",
+    "bechdel_path2 = \"/Users/shrinidhivelan/Downloads/movies2.csv\"\n",
+    "\n",
+    "### creating dataset by extracting the main CMU data ###\n",
     "MovieMetadata_df, CharacterMetadata_df, names_df, plot_summaries_df, tvTropes_df, merged_Movie = create_datasets(file_source, reviews_path)\n",
     "\n",
     "reviews = pd.read_csv(reviews_path)\n",
