--- a/jacques.ipynb
+++ b/jacques.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4                            {\"/m/07s9rl0\": \"Drama\"}  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "4       0.222222  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,145 +538,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Bechdel rating</th>\n",
-       "      <th>Female proportion</th>\n",
-       "      <th>Custom metric</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1610</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>1.444444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1941</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.111111</td>\n",
-       "      <td>1.111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3751</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.222222</td>\n",
-       "      <td>1.222222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3189</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.111111</td>\n",
-       "      <td>0.111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1538</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.555556</td>\n",
-       "      <td>1.555556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1130</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.555556</td>\n",
-       "      <td>1.555556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1294</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>1.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>860</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3507</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.222222</td>\n",
-       "      <td>0.222222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3174</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.111111</td>\n",
-       "      <td>0.111111</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3231 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Bechdel rating  Female proportion  Custom metric\n",
-       "1610               1           0.444444       1.444444\n",
-       "1941               1           0.111111       1.111111\n",
-       "3751               1           0.222222       1.222222\n",
-       "3189               0           0.111111       0.111111\n",
-       "1538               1           0.555556       1.555556\n",
-       "...              ...                ...            ...\n",
-       "1130               1           0.555556       1.555556\n",
-       "1294               1           0.333333       1.333333\n",
-       "860                0           0.333333       0.333333\n",
-       "3507               0           0.222222       0.222222\n",
-       "3174               0           0.111111       0.111111\n",
-       "\n",
-       "[3231 rows x 3 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "binary_feminist_list = (merged_df['Custom metric'] > 1.5).astype(int)\n",
     "\n",
     "# X contains features; y contains the target variable\n",
-    "X = merged_df[['Bechdel rating', 'Female proportion', 'Custom metric']]\n",
+    "X = merged_df[['Custom metric']]\n",
     "y = binary_feminist_list\n",
     "\n",
     "# Split into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "display(X_train)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -736,18 +616,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples 4039\n",
+      "Number of features 40956\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "import numpy as np\n",
+    "from sklearn.utils import shuffle\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Get a prediction using SVM with the previous metric\n",
+    "merged_df['SVM prediction'] = model.predict(merged_df[['Custom metric']])\n",
+    "\n",
+    "# Initialize the vectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "\n",
+    "# Create bag of words features\n",
+    "X = vectorizer.fit_transform(merged_df['Summaries'])\n",
+    "\n",
+    "print('Number of samples', X.toarray().shape[0])\n",
+    "print('Number of features', X.toarray().shape[1])\n",
+    "\n",
+    "Y = np.array(merged_df['SVM prediction']) == 1\n",
+    "Y = Y.astype(int)\n",
+    "\n",
+    "# Shuffle the data\n",
+    "X, Y = shuffle(X, Y, random_state=42)\n",
+    "\n",
+    "# Balance the data\n",
+    "rus = RandomUnderSampler(random_state=42)\n",
+    "X, Y = rus.fit_resample(X, Y)\n",
+    "\n",
+    "# Split into training and testing set\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [740, 3231]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[106], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Train a SVM\u001b[39;00m\n\u001b[0;32m      7\u001b[0m svm_model \u001b[38;5;241m=\u001b[39m SVC(kernel\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear\u001b[39m\u001b[38;5;124m'\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Predict with this SVM model\u001b[39;00m\n\u001b[0;32m     11\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n",
+      "File \u001b[1;32mc:\\Users\\jacqu\\anaconda3\\envs\\ada\\Lib\\site-packages\\sklearn\\base.py:1473\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[1;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1466\u001b[0m     estimator\u001b[38;5;241m.\u001b[39m_validate_params()\n\u001b[0;32m   1468\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m   1469\u001b[0m     skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m   1470\u001b[0m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m   1471\u001b[0m     )\n\u001b[0;32m   1472\u001b[0m ):\n\u001b[1;32m-> 1473\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fit_method(estimator, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\jacqu\\anaconda3\\envs\\ada\\Lib\\site-packages\\sklearn\\svm\\_base.py:190\u001b[0m, in \u001b[0;36mBaseLibSVM.fit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    188\u001b[0m     check_consistent_length(X, y)\n\u001b[0;32m    189\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 190\u001b[0m     X, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(\n\u001b[0;32m    191\u001b[0m         X,\n\u001b[0;32m    192\u001b[0m         y,\n\u001b[0;32m    193\u001b[0m         dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat64,\n\u001b[0;32m    194\u001b[0m         order\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    195\u001b[0m         accept_sparse\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsr\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    196\u001b[0m         accept_large_sparse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m    197\u001b[0m     )\n\u001b[0;32m    199\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_targets(y)\n\u001b[0;32m    201\u001b[0m sample_weight \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(\n\u001b[0;32m    202\u001b[0m     [] \u001b[38;5;28;01mif\u001b[39;00m sample_weight \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m sample_weight, dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat64\n\u001b[0;32m    203\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\jacqu\\anaconda3\\envs\\ada\\Lib\\site-packages\\sklearn\\base.py:650\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, cast_to_ndarray, **check_params)\u001b[0m\n\u001b[0;32m    648\u001b[0m         y \u001b[38;5;241m=\u001b[39m check_array(y, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_y_params)\n\u001b[0;32m    649\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 650\u001b[0m         X, y \u001b[38;5;241m=\u001b[39m check_X_y(X, y, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n\u001b[0;32m    651\u001b[0m     out \u001b[38;5;241m=\u001b[39m X, y\n\u001b[0;32m    653\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m check_params\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mensure_2d\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m):\n",
+      "File \u001b[1;32mc:\\Users\\jacqu\\anaconda3\\envs\\ada\\Lib\\site-packages\\sklearn\\utils\\validation.py:1320\u001b[0m, in \u001b[0;36mcheck_X_y\u001b[1;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_writeable, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001b[0m\n\u001b[0;32m   1301\u001b[0m X \u001b[38;5;241m=\u001b[39m check_array(\n\u001b[0;32m   1302\u001b[0m     X,\n\u001b[0;32m   1303\u001b[0m     accept_sparse\u001b[38;5;241m=\u001b[39maccept_sparse,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1315\u001b[0m     input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   1316\u001b[0m )\n\u001b[0;32m   1318\u001b[0m y \u001b[38;5;241m=\u001b[39m _check_y(y, multi_output\u001b[38;5;241m=\u001b[39mmulti_output, y_numeric\u001b[38;5;241m=\u001b[39my_numeric, estimator\u001b[38;5;241m=\u001b[39mestimator)\n\u001b[1;32m-> 1320\u001b[0m check_consistent_length(X, y)\n\u001b[0;32m   1322\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m X, y\n",
+      "File \u001b[1;32mc:\\Users\\jacqu\\anaconda3\\envs\\ada\\Lib\\site-packages\\sklearn\\utils\\validation.py:457\u001b[0m, in \u001b[0;36mcheck_consistent_length\u001b[1;34m(*arrays)\u001b[0m\n\u001b[0;32m    455\u001b[0m uniques \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39munique(lengths)\n\u001b[0;32m    456\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(uniques) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m--> 457\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    458\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound input variables with inconsistent numbers of samples: \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    459\u001b[0m         \u001b[38;5;241m%\u001b[39m [\u001b[38;5;28mint\u001b[39m(l) \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m lengths]\n\u001b[0;32m    460\u001b[0m     )\n",
+      "\u001b[1;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [740, 3231]"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Train a SVM\n",
+    "svm_model = SVC(kernel='linear', random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict with this SVM model\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Apply this logistic regression model to the original dataset to predict on all of the movies***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
